Redirection to linkedIn added

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
+
 <html class="no-js">
 <!--<![endif]-->
 
@@ -11,12 +8,13 @@
 
     <!-- Metas -->
     <meta charset="utf-8">
-    <title>Masiur Rahman Siddiki - Tech Enthusiastic</title>
+    <title>Masiur Rahman Siddiki - Software Engineer</title>
     <link rel="shortcut icon" href="img/favicon.png" />
     <meta name="description" content="Personal Website">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Masiur Rahman Siddiki">
     <meta name="keywords" content="Masiur Rahman Siddiki, Moshi, SUST CSE, InfancyIT, CSE 2012,Jamalpur, Sylhet">
+	<meta http-equiv="refresh" content="2; url=https://www.linkedin.com/in/masiurcse/" />
 
     <!-- Css -->
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
@@ -105,7 +103,7 @@
                                 </li>
                                 <li><a href="http://twitter.com/masiur99"><i class="icon-twitter"></i></a>
                                 </li>
-                                <li><a href="http://linkedin.com/masiurcse"><i class="icon-linkedin"></i></a>
+                                <li><a href="https://www.linkedin.com/in/masiurcse/"><i class="icon-linkedin"></i></a>
                                 </li>
 
 
