--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 
 
     <!-- Preloader -->
-    <div id="loader">
+<!--     <div id="loader"> -->
         <!-- Preloader inner -->
-        <div id="loaderInner">
+<!--         <div id="loaderInner">
             <div class="spinner"></div>
-        </div>
+        </div> -->
         <!-- End preloader inner -->
-    </div>
+<!--     </div> -->
     <!-- End preloader-->
 
 
