--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
                                 <div class="row ">
 
                                     <div class="col-md-12">
-                                        <a class="but opc-1 ico" href="Resume_of_Masiur_Rahman_Siddiki.pdf">View/Download my cv</a>
+                                        <a class="but opc-1 ico" target="_blank" href="Resume_of_Masiur_Rahman_Siddiki.pdf">View/Download my cv</a>
 <!--                                        <a class="but opc-2 ico" href="#">Print my resume</a>-->
 
                                     </div>
