--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                         <div class="bottom-header bgWhite ofsTSmall ofsBSmall tCenter">
                             <ul class="social">
-                                <li><a href="http://facebook.com/masiur99"><i class="icon-facebook"></i></a>
+                                <li><a href="https://www.facebook.com/MasiurRahmanSiddiki"><i class="icon-facebook"></i></a>
                                 </li>
                                 <li><a href="http://twitter.com/masiur99"><i class="icon-twitter"></i></a>
                                 </li>
