--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <!--	<meta http-equiv="refresh" content="2; url=https://www.linkedin.com/in/masiurcse/" />-->
 
     <!-- Css -->
-    <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/owl-carousel/owl.carousel.css" rel="stylesheet" media="all">
     <link href="css/owl-carousel/owl.theme.css" rel="stylesheet" media="all">
     <link href="css/magnific-popup.css" type="text/css" rel="stylesheet" media="all" />
@@ -1551,13 +1551,13 @@
 
     <!--Javascript-->
     <script src="js/jquery-1.11.3.min.js" type="text/javascript"></script>
-    <script src="js/jquery-migrate-1.2.1.js" type="text/javascript"></script>
+<!--    <script src="js/jquery-migrate-1.2.1.js" type="text/javascript"></script>-->
     <script src="js/owl.carousel.js" type="text/javascript"></script>
     <script src="js/jquery.magnific-popup.js" type="text/javascript"></script>
     <script src="js/jquery.easytabs.min.js" type="text/javascript"></script>
-    <script src="js/jquery.easing.1.3.js" type="text/javascript"></script>
-    <script src="js/modernizr.js" type="text/javascript"></script>
-    <script src="js/placeholders.min.js" type="text/javascript"></script>
+<!--    <script src="js/jquery.easing.1.3.js" type="text/javascript"></script>-->
+<!--    <script src="js/modernizr.js" type="text/javascript"></script>-->
+<!--    <script src="js/placeholders.min.js" type="text/javascript"></script>-->
     <script type="text/javascript" src="js/Switcher/switcher.js"></script>
     <script src="js/script.js" type="text/javascript"></script>
 
