meta tags updated

--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
         Engineer, Officer">
 <!--	<meta http-equiv="refresh" content="2; url=https://www.linkedin.com/in/masiurcse/" />-->
 
+    <meta property="og:title" content="Masiur Rahman Siddiki - Web Developer & Network Engineer">
+    <meta property="og:description" content="Masiur Rahman Siddiki is currently working at ICT Cell of Shahjalal University of Science & Technology as
+        Assistant Network Engineer. Previously worked in private software firm named InfancyIT as Software Engineer and Junior Software Engineer.">
+    <meta property="og:image" content="img/masiur_rahman_siddiki.jpg">
+    <meta property="og:url" content="http://www.MasiurSiddiki.com">
+
+
+
     <!-- Css -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="css/owl-carousel/owl.carousel.css" rel="stylesheet" media="all">
