--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         Assistant Network Engineer. Previously worked in private software firm named InfancyIT as Software Engineer and Junior Software Engineer.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Masiur Rahman Siddiki">
-    <meta name="keywords" content="Masiur Rahman Siddiki, Moshi, SUST CSE, InfancyIT, CSE 2012, Jamalpur, Sylhet, Jamalpur Association SUST,
+    <meta name="keywords" content="Masiur Rahman Siddiki, মশিউর রহমান সিদ্দিকী, Moshi, SUST CSE, InfancyIT, CSE 2012, Jamalpur, Sylhet, Jamalpur Association SUST,
         Masiur, Rahman, Siddiki, SUST CSE 2012, Shahjalal University, Akhaliya, Unilever Mess, Software Engineer, ICT Cell, Computer Science & Engineering,
         CSE 21st Batch sustcse12.xyz, DevOps, Network Engineer, System Admin, IT Expert, Madarganj, Zilla School, Ashek Mahmud College, Fintech Enthusiast, Assistant
         Engineer, Officer">
@@ -26,6 +26,7 @@
     <meta property="og:image" content="img/masiur_rahman_siddiki.jpg">
     <meta property="og:url" content="http://www.MasiurSiddiki.com">
 
+<!--    মশিউর রহমান সিদ্দিকী সহকারী নেটওয়ার্ক ইঞ্জিনিয়ার, শাহজালাল বিজ্ঞান ও প্রযুক্তি বিশ্ববিদ্যালয় -->
 
 
     <!-- Css -->
