--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
 <!--                                     <li><a  href="#portfolio" data-target="portfolio"><i class="icon-camera"></i>Portfolio</a></li>-->
                                     <li><a href="#contact" data-target="contact"><i class="icon-phone"></i>Contact</a>
                                     </li>
+                                    <li><a href="posts.html" ><i class="icon-pencil"></i>Blog</a>
+                                    </li>
                                 </ul>
 
                             </nav>
