--- a/index.html
+++ b/index.html
@@ -169,7 +169,10 @@
                                     <!--Row-->
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <p>I love web because i think apps or sites just need a brower either on mobile or desktop. Love Technology and its versatality. Mainly Back-End with enthusiasm in Front-End. </p>
+                                            <p>I was enthusiast and loved technology from my high-school part of life though I didn't have any high-end device. Then became
+                                                fortunate enough to have majored in Computer Science & Engineering at SUST, then worked more than three years for/with
+                                                a startup with renowned industry tools.
+                                                Now, wanna work for integrating IT with mass people. Desire to the serve my nation through Govt. Sector. </p>
                                         </div>
 
                                         <div class="col-md-6">
