--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
         Masiur, Rahman, Siddiki, SUST CSE 2012, Shahjalal University, Akhaliya, Unilever Mess, Software Engineer, ICT Cell, Computer Science & Engineering,
         CSE 21st Batch sustcse12.xyz, DevOps, Network Engineer, System Admin, IT Expert, Madarganj, Zilla School, Ashek Mahmud College, Fintech Enthusiast, Assistant
         Engineer, Officer">
-<!--	<meta http-equiv="refresh" content="2; url=https://www.linkedin.com/in/masiurcse/" />-->
 
     <meta property="og:title" content="Masiur Rahman Siddiki - Web Developer & Network Engineer">
     <meta property="og:description" content="Masiur Rahman Siddiki is currently working at ICT Cell of Shahjalal University of Science & Technology as
@@ -76,7 +75,7 @@
 
                             <!--Profile image-->
                             <figure class="img-profile">
-                                <img src="img/masiur_rahman_siddiki.jpg" alt="Masiur Profile Photo"/>
+                                <img class="img-responsive" src="img/masiur_rahman_siddiki.jpg" alt="Masiur Profile Photo"/>
 
                                 <figcaption class="name-profile">
                                     <span>Masiur Rahman Siddiki <sup>&reg;</sup></span>
@@ -96,10 +95,12 @@
                                     </li>
                                     <li><a href="posts.html" ><i class="icon-pencil"></i>Blog</a>
                                     </li>
+                                    <li ><a href="profiles.html" ><i class="icon-link"></i>Profiles</a>
+                                    </li>
                                 </ul>
 
                             </nav>
-                            <!--End main navigation
+                            <!--End main navigation -->
 
                         </div>
                         <!--End main header-->
@@ -168,7 +169,7 @@
 
                                     <!--Row-->
                                     <div class="row">
-                                        <div class="col-md-6">
+                                        <div class="col-sm-6 col-md-12">
                                             <p>I was enthusiast and loved technology from my high-school part of life though I didn't have any high-end device. Then became
                                                 fortunate enough to have majored in Computer Science & Engineering at SUST, then worked more than three years for/with
                                                 a startup with renowned industry tools.
