--- a/profiles.html
+++ b/profiles.html
@@ -45,20 +45,110 @@
     <!--[if gte IE 9]>
     <link rel="stylesheet" type="text/css" href="css/ie9.css" />
     <![endif]-->
+    <style>
+        /* Style the navigation menu */
+        @media (min-width: 767px) {
+            .topnav {
+                display: none;
+            }
+        }
+
+        .topnav {
+            overflow: hidden;
+            transition: all 2s linear;
+            background-color: #333;
+            position: fixed;
+            z-index: 100;
+            top: 0;
+            right: 0;
+            left: 0;
+        }
+
+
+        /* Hide the links inside the navigation menu (except for logo/home) */
+        .topnav.hidden #myLinks {
+            /*display: none;*/
+            transform:translate(9999px);
+            opacity: 0;
+        }
+        .topnav #myLinks {
+            transition: opacity 2s linear;
+            transform:translate(0);
+            opacity: 1;
+        }
+
+        /* Style navigation menu links */
+        .topnav a {
+            color: white;
+            padding: 14px 16px;
+            text-decoration: none;
+            font-size: 17px;
+            display: block;
+            right: 0;
+            top: 0;
+        }
+
+        /* Style the hamburger menu */
+        .topnav a.icon {
+            background: #ffffff;
+            display: block;
+            position: absolute;
+            /*right: 0;*/
+            /*top: 0;*/
+        }
+
+        /* Add a grey background color on mouse-over */
+        .topnav a:hover {
+            background-color: #ddd;
+            color: black;
+        }
+
+        /* Style the active link (or home/logo) */
+        .active {
+            background-color: #33373d;
+            color: white;
+        }
+
+
+    </style>
 </head>
 
 <body>
 
 
-<!-- Preloader -->
-<!--     <div id="loader"> -->
-<!-- Preloader inner -->
-<!--         <div id="loaderInner">
-            <div class="spinner"></div>
-        </div> -->
-<!-- End preloader inner -->
-<!--     </div> -->
-<!-- End preloader-->
+<!-- Top Navigation Menu -->
+<div class="topnav">
+    <a href="/" class="active active-class-text">Profiles</a>
+    <!-- Navigation links (hidden by default) -->
+    <div id="myLinks" style="display: none">
+        <a class="clicked" href="index.html#about">Home</a>
+        <a class="clicked" href="index.html#contact">Contact</a>
+        <a class="clicked" href="posts.html">Posts</a>
+        <a class="clicked" href="profiles.html">Profiles</a>
+    </div>
+    <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+    <a  class="icon" onclick="myFunction()">
+        <img src="https://img.icons8.com/android/16/000000/menu.png"/>
+    </a>
+</div>
+
+<script>
+    function myFunction() {
+
+        $("#myLinks").toggle(function () {
+            $("#myLinks").css({display:"none!important;"});
+        }, function () {
+            $("#myLinks").css({display:"block!important;"});
+        });
+
+
+        $(".clicked").click(function(){
+            var text = $(this).text();
+            $(".active-class-text").text(text);
+            $(this).parent().fadeOut(200);
+        });
+    }
+</script>
 
 
 <!--Wrapper-->
