--- a/index.html
+++ b/index.html
@@ -261,7 +261,11 @@
                                     <!--Row-->
                                     <div class="row">
                                         <div class="col-sm-6 col-md-12">
-                                            <p>I was enthusiast and loved technology from my high-school part of life though I didn't have any high-end device. Then became
+                                            <p style="font-size: 16px;
+line-height: 25px;
+letter-spacing: 0.003em;
+font-weight: 400;
+font-style: normal;">I was enthusiast and loved technology from my high-school part of life though I didn't have any high-end device. Then became
                                                 fortunate enough to have majored in Computer Science & Engineering at SUST, then worked more than three years for/with
                                                 a startup with renowned industry tools.
                                                 Now, wanna work for integrating IT with mass people. Desire to the serve my nation through Govt. Sector. </p>
