--- a/index.html
+++ b/index.html
@@ -1700,6 +1700,7 @@ font-style: normal;">I was enthusiast and loved technology from my high-school p
             });
 
         })(jQuery);
+	    
     </script>
 
 
@@ -1707,7 +1708,19 @@ font-style: normal;">I was enthusiast and loved technology from my high-school p
 
 
     <!-- End google analytics -->
-
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+(function(){
+var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+s1.async=true;
+s1.src='https://embed.tawk.to/5f3282b020942006f46aa07e/default';
+s1.charset='UTF-8';
+s1.setAttribute('crossorigin','*');
+s0.parentNode.insertBefore(s1,s0);
+})();
+</script>
+<!--End of Tawk.to Script-->
 
 </body>
 
