--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
             <a class="clicked" href="#contact">Contact</a>
             <a class="clicked" href="posts.html">Posts</a>
             <a class="clicked" href="profiles.html">Profiles</a>
+	    <a class="clicked" href="http://মশিউর.বাংলা">বাংলা</a>
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
         <a  class="icon" onclick="myFunction()">
