--- a/index.html
+++ b/index.html
@@ -189,6 +189,9 @@
                                     </li>
                                     <li ><a href="profiles.html" ><i class="icon-link"></i>Profiles</a>
                                     </li>
+				    <li>
+					<a href="http://মশিউর.বাংলা" ><i class="icon-link"></i>বাংলা</a>
+				    </li>
                                 </ul>
 
                             </nav>
