--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 
                             <!--Profile image-->
                             <figure class="img-profile">
-                                <img class="img-responsive" src="img/masiur_rahman_siddiki.jpg" alt="Masiur Profile Photo"/>
+                                <img class="img-responsive" src="/img/masiur_rahman_siddiki.jpg" alt="Masiur Profile Photo"/>
 
                                 <figcaption class="name-profile">
                                     <span>Masiur Rahman Siddiki <sup>&reg;</sup></span>
@@ -202,7 +202,7 @@
 
                         <div class="bottom-header bgWhite ofsTSmall ofsBSmall tCenter">
                             <ul class="social">
-                                <li><a href="https://www.facebook.com/MasiurRahmanSiddiki"><i class="icon-facebook"></i></a>
+                                <li><a href="https://www.facebook.com/profile.php?id=100001662379621"><i class="icon-facebook"></i></a>
                                 </li>
                                 <li><a href="http://twitter.com/masiur99"><i class="icon-twitter"></i></a>
                                 </li>
