--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
 
 
     </style>
+	<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "2d8a926fe6f64a65b563e8d4542cdd6a"}'></script><!-- End Cloudflare Web Analytics -->
 </head>
 
 <body>
