--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
 
 
     </style>
-	<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "2d8a926fe6f64a65b563e8d4542cdd6a"}'></script><!-- End Cloudflare Web Analytics -->
 </head>
 
 <body>
@@ -1727,6 +1726,12 @@ s0.parentNode.insertBefore(s1,s0);
 </script>
 <!--End of Tawk.to Script-->
 
+	
+	<!-- Cloudflare Web Analytics -->
+	<script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "2d8a926fe6f64a65b563e8d4542cdd6a"}'>
+	</script>
+	<!-- End Cloudflare Web Analytics -->
+	
 </body>
 
 </html>
