--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         Assistant Network Engineer and prior to that in a software firm(startup) named InfancyIT as Software Engineer and Junior Software Engineer.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Masiur Rahman Siddiki">
-    <meta name="keywords" content="Masiur Rahman Siddiki, মশিউর রহমান সিদ্দিকী, Moshi, SUST CSE, InfancyIT, CSE 2012, Jamalpur, Sylhet, Jamalpur Association SUST,
-        Masiur, Rahman, Siddiki, SUST CSE 2012, Shahjalal University, Akhaliya, Unilever Mess, Software Engineer, ICT Cell, Computer Science & Engineering,
+    <meta name="keywords" content="Masiur Rahman Siddiki, মশিউর রহমান সিদ্দিকী, Moshi, SUST CSE, Authlab, WPManageNinja, InfancyIT, CSE 2012, Jamalpur, Sylhet, Jamalpur Association SUST,
+        Masiur, Rahman, Siddiki, SUST CSE 2012, Shahjalal University, Akhalia, Unilever Mess, Software Engineer, ICT Cell, Computer Science & Engineering,
         CSE 21st Batch sustcse12.xyz, DevOps, Network Engineer, System Admin, IT Expert, Madarganj, Zilla School, Ashek Mahmud College, Fintech Enthusiast, Assistant
-        Engineer, Officer">
+        Engineer, Senior Software Engineer, Wordpress, Plugin, Jalalabad, Officer">
 
     <meta property="og:title" content="Masiur Rahman Siddiki - Web Developer">
     <meta property="og:description" content="Masiur Rahman Siddiki is currently working at AuthLab as
@@ -125,7 +125,6 @@
             <a class="clicked" href="#contact">Contact</a>
             <a class="clicked" href="posts.html">Posts</a>
             <a class="clicked" href="profiles.html">Profiles</a>
-	    <a class="clicked" href="http://মশিউর.বাংলা">বাংলা</a>
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
         <a  class="icon" onclick="myFunction()">
@@ -313,7 +312,7 @@ font-style: normal;">I was enthusiast and loved technology from my high-school p
                                             <div class="col-md-6">
 
                                                 <ul class="info-list">
-                                                    <li><span class="inf">Email</span> <span class="value">masiur-ictc AT sust DOT edu</span>
+                                                    <li><span class="inf">Email</span> <span class="value">inboxt AT masiursiddiki DOT com</span>
                                                     </li>
                                                     <li><span class="inf">Phone</span> <span class="value"> +88 01711 107 915	</span>
                                                     </li>
