--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@ font-style: normal;">I was enthusiast and loved technology from my high-school p
                             <!--Main title-->
 
                             <div class="main-title">
-                                <h1>services</h1>
+                                <h1>Loves Doing</h1>
                                 <div class="divider">
                                     <div class="zigzag large clearfix " data-svg-drawing="yes">
                                         <svg xml:space="preserve" viewBox="0 0 69.172 14.975" width="37" height="28" y="0px" x="0px" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns="http://www.w3.org/2000/svg" version="1.1">
