--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
 
                                     <div class=" profile margBSmall">
                                         <h1>Masiur Rahman Siddiki</h1>
-                                        <h3 style="text-transform: capitalize;">Network Engineer & Web Developer</h3>
+                                        <h3 style="text-transform: capitalize;">Full Stack Web Developer</h3>
                                     </div>
 
                                     <!--Row-->
